@011&trunk fix the forum scrollbars
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10788 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -278,7 +278,7 @@ background-color: #eed;
 }
 
 /* why use this shit anyway?! */
-.main > .boxBody, .tournamentInvite {
+.mainRegular > .boxBody, .tournamentInvite {
 	overflow:inherit !important;
 }
 .tournamentInvite::after {
